# clevis

./: README.md
.github/workflows/: install-dependencies
src/: tests-common-functions
src/initramfs-tools/scripts/local-top/: clevis.in
src/luks/: clevis-luks-common-functions.in
src/luks/dracut/clevis/: module-setup.sh.in
src/luks/dracut/clevis-pin-tpm1/: module-setup.sh.in
src/luks/systemd/: meson.build
src/luks/tests/: list-multiple-slots-luks1  list-multiple-slots-luks2
src/pins/tang/tests/: tang-common-test-functions.in
src/pins/tpm1/: clevis-encrypt-tpm1  clevis-encrypt-tpm1.1.adoc  clevis-tpm1-tcsd-preload.c
src/pins/tpm1/tests/: meson.build  pin-tpm1-tests  tcsd-patch.c  tpm1-common-test-functions
src/pins/tpm2/: clevis-encrypt-tpm2  pin-tpm2
src/pins/tpm2/tests/: meson.build  pin-tpm2-tests  tpm2-common-test-functions  tpm2-common-test-functions.in
